# yt

./: .bzrignore  .codecov.yml  .coveragerc  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .hgchurn  .hgignore  .hgtags  .mailmap  .pep8speaks.yml  .pre-commit-config.yaml  .travis.yml  CITATION  CONTRIBUTING  CONTRIBUTING.rst  COPYING.txt  CREDITS  EnzoFortranRoutines.pfp  EnzoFortranRoutines.pyf  FUNDING  MANIFEST.in  README  README.md  appveyor.yml  asv.conf.json  check_for_setup.py  clean.sh  coding_styleguide.txt  conftest.py  data_registry_inspection.ipynb  distribute_setup.py  epydoc.cfg  extensions.yml  framework.py  freezer.py  log  make_apipy.py  (+33 more)
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  config.yml  dependabot.yml  main.workflow  mergeable.yml
.github/workflows/: bleeding-edge.yaml  build-test-pytest.yaml  build-test.yaml  check-labels.yaml  check-manifest.yaml  check-title-and-labels.yaml  codetour-check.yaml  daily-test.yaml  dead_code.yaml  docs-test.yml  docs.yaml  publish-to-pypi.yml  rules-checks.yaml  slash-command-dispatch.yml  style-checks.yaml  type-checking.yaml  wheels.yaml
.tours/: particle-indexing.tour
answer-store/py27_answers_line_plot/: py27_answers_line_plot
answer-store/py27_answers_multi_line_plot/: py27_answers_multi_line_plot
answer-store/py27_fake_hexahedral_ds_render/: py27_fake_hexahedral_ds_render
answer-store/py27_mesh_slices_amr/: py27_mesh_slices_amr
answer-store/py27_particle_phase_attributes/: py27_particle_phase_attributes
answer-store/py27_particle_phase_plots/: py27_particle_phase_plots
answer-store/py27_particle_plot/: py27_particle_plot
answer-store/py27_particle_plot_c/: py27_particle_plot_c
answer-store/py27_particle_plot_ds/: py27_particle_plot_ds
answer-store/py27_particle_plot_wf/: py27_particle_plot_wf
answer-store/py27_particle_projection_filter/: py27_particle_projection_filter
answer-store/py27_phase_plot_attributes/: py27_phase_plot_attributes
answer-store/py27_phase_plots/: py27_phase_plots
answer-store/py27_plot_window_offaxis_projection_plot/: py27_plot_window_offaxis_projection_plot
answer-store/py27_plot_window_offaxis_slice_plot/: py27_plot_window_offaxis_slice_plot
answer-store/py27_plot_window_projection_plot/: py27_plot_window_projection_plot
answer-store/py27_plot_window_projection_plot_c/: py27_plot_window_projection_plot_c
answer-store/py27_plot_window_projection_plot_ds/: py27_plot_window_projection_plot_ds
answer-store/py27_plot_window_projection_plot_m/: py27_plot_window_projection_plot_m
answer-store/py27_profile_plots/: py27_profile_plots
benchmarks/: asv.conf.json
data/: SedovBlastAMR.enzo  make_slice.py
doc/: Dockerfile  Makefile  README  REORG_NOTES  REORG_NOTES~  activate  activate.csh  cheatsheet.tex  coding_styleguide.txt  demo.html  docstring_example.txt  docstring_idioms.txt  get_yt.sh  how_to_develop_yt.txt  howto.tex  install-miniconda.ps1  install_script.sh  install_script_osx.sh  install_script_osx106.sh  install_v2.sh  ipy_profile_yt.py  ipython-yt  requirements.txt  wipe_svn.sh  yt_icons.icns
examples/: README  automated_plotconfig.xml  clumping_factor.py  clumping_factors_all_datasets.py  cookbook_extract_data.py  cookbook_find_clumps.py  cookbook_hop_mass_sum.py  cookbook_linked_plot_save.py  cookbook_make_timeseries.py  cookbook_make_zoomin.py  cookbook_making_1d_profiles.py  cookbook_making_2d_profiles.py  cookbook_mass_sum.py  cookbook_multiple_fields_multiple_widths_plot.py  cookbook_multiple_fields_single_width_plot.py  cookbook_multiple_widths_plot.py  cookbook_plotting_1dprofiles.py  cookbook_plotting_2dprofiles.py  cookbook_simple_projection.py  cookbook_simulation_halo_profiler.py  cookbook_single_width_plot.py  cookbook_timeseries_avg_temp.py  cookbook_timeseries_max_dens.py  examples.py  fastBuildMerge.py  fido_dirwatch.py  find_clumps_all_datasets.py  find_clumps_dataset.py  get_particles_enzorun.py  get_stars.py  iterate_over_outputs.py  makeLightCone.py  make_plots_enzorun.py  make_slice_threebythree.py  mpl_make_movie.py  parallel_galaxy_analysis.py  parallel_projection_mpi4py.py  raven_plots_config.py  runHaloProfiler.py  run_halo_profiler.py  (+10 more)
requirements/: docs.txt  minimal_env.txt  typecheck.txt
scripts/: eyt  fbranch  fdigup  ffetch  fimport  frevert  iyt  pr_backport.py  pyro_queue.py  reason  strip_trailing_whitespace.py  yt  yt_lodgeit.py  yt_particles.py  yt_timeseries.py  yt_zoomin.py
src/: __init__.py  arraytypes.py  config.py  funcs.py  importer.py  logger.py  setup.py  shell.py
tests/: README  boolean_regions.py  cartopy_requirements.txt  ci_before_install.sh  ci_install.sh  cloud_answer_tests_runner.py  compare_volume.py  download_datasets.py  download_datasets.yaml  fields_to_test.py  fontlist-v390.json  get_oso.py  get_vector_overlay.py  halos.py  hierarchy_consistency.py  lint_requirements.txt  matplotlibrc  nose_runner.py  object_field_values.py  projections.py  pytest_runner.py  report_failed_answers.py  runall.py  test_datamanipulation.py  test_hdf5_reader.py  test_hierarchy.py  test_hippodraw.py  test_install_script.py  test_lagos.py  test_masssum.py  test_minimal_requirements.txt  test_mpl.py  test_orion.py  test_outputs.py  test_prerequirements.txt  test_projection.py  test_raven.py  test_requirements.txt  tests.yaml  tests_2.7.yaml  (+8 more)
yt/: __init__.py  _typing.py  _version.py  amr_utils.c  amr_utils.pyx  api.py  arraytypes.py  auto_update_ambiguous.py  cmdln.py  command_line.py  commands.py  config.py  convenience.py  default.mplstyle  exceptions.py  exthook.py  funcs.py  imods.py  list_of_enzo_uses.txt  loaders.py  logger.py  math_utils.py  mods.py  parallel_tools.py  performance_counters.py  physical_constants.py  pmods.py  ramses_reader.cpp  ramses_reader.pyx  recipes.py  rpdb.py  sage.py  sample_data_registry.json  setup.py  startup_tasks.py  test_fake_amr_ds_particle_positions_within_domain.py  testing.py  utils.c  utils.pyx
yt_fire/: __init__.py  data_structures.py  fields.py
yt_gizmo/: __init__.py  data_structures.py  fields.py
(+2800 files in other folders)
