[metadata]
name = yt
version = 4.1.dev0
description = An analysis and visualization toolkit for volumetric data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yt-project/yt
author = The yt project
author_email = yt-dev@python.org
license = BSD 3-Clause
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: Matplotlib
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: AIX
    Operating System :: POSIX :: Linux
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Visualization
keywords = astronomy astrophysics visualization amr adaptivemeshrefinement
project_urls =
    Homepage=https://yt-project.org/
    Documentation=https://yt-project.org/doc/
    Source=https://github.com/yt-project/yt/
    Tracker=https://github.com/yt-project/yt/issues

[options]
packages = find:
install_requires =
    ipython>=2.0.0
    matplotlib!=3.4.2,>=2.0.2,<3.6
    more-itertools>=8.4
    numpy>=1.13.3
    packaging>=20.9
    pyyaml>=4.2b1
    setuptools>=19.6
    sympy>=1.2
    toml>=0.10.2
    tqdm>=3.4.0
    unyt>=2.8.0
python_requires = >=3.6,<3.12
include_package_data = True
scripts = scripts/iyt
zip_safe = False

[options.entry_points]
console_scripts =
    yt = yt.utilities.command_line:run_main
nose.plugins.0.10 =
    answer-testing = yt.utilities.answer_testing.framework:AnswerTesting

[options.extras_require]
doc =
    alabaster
    bottle
    nbconvert==5.6.1
    pyregion
    pyx>=0.15
    runnotebook
    sphinx==3.1.2
    sphinx-bootstrap-theme
    sphinx-rtd-theme
full =
    astropy>=4.0.1,<5.0.0
    f90nml>=1.1.2
    fastcache~=1.0.2
    firefly-vis>=2.0.0,<2.0.3 #https://github.com/ageller/Firefly/issues/62
    glueviz~=0.13.3
    h5py>=3.1.0,<4.0.0
    libconf~=1.0.1
    miniballcpp>=0.2.1
    mpi4py~=3.0.3
    netCDF4~=1.5.3
    pandas~=1.1.2
    pooch>=0.7.0
    pyaml~=17.10.0
    pykdtree~=1.3.1
    pyqt5~=5.15.2
    pyx~=0.15
    requests~=2.20.0
    scipy~=1.5.0
    xarray~=0.16.1
mapserver =
    bottle
minimal =
    ipython==2.0.0
    matplotlib==2.0.2
    more-itertools==8.4
    numpy==1.13.3
    sympy==1.2
    unyt==2.8.0
test =
    codecov~=2.0.15
    coverage~=4.5.1
    nose~=1.3.7
    nose-exclude
    nose-timer~=1.0.0
    pytest>=6.1
    pytest-xdist~=2.1.0

[flake8]
max-line-length = 88
exclude = doc,
    benchmarks,
    */api.py,                          # avoid spurious "unused import"
    */__init__.py,                     # avoid spurious "unused import"
    */__config__.py,                   # autogenerated
    yt/units,                          # wrapper around unyt, avoid spurious "unused import"
    yt/frontends/stream/sample_data,   # autogenerated
    yt/visualization/_mpl_imports.py,
    yt/utilities/fits_image.py,
    yt/utilities/lodgeit.py,
    yt/mods.py,
    yt/visualization/_colormap_data.py,
ignore = E203, # Whitespace before ':' (black compatibility)
    E266, # Too many leading '#' for block comment
    E302, # Expected 2 blank lines, found 0
    E501, # Line too long (let Black deal with line-lenght)
    E741, # Do not use variables named 'I', 'O', or 'l'
    W503, # Line break occurred before a binary operator (black compatibility)
enable-extensions = G  # flake8-logging-format (extension is disabled by default)
jobs = 8
